# one-leg-humanoid-jumping

./: CMakeLists.txt  README.md  Trajectory.cpp  Trajectory.h  main.cpp  testmain.cpp
include/: InitializeJinee.h  PDController.h  ParameterPlot.h  Robot.h  computeForceTrajectory.h
src/: InitializeJinee.cpp  PDController.cpp  ParameterPlot.cpp  computeForceTrajectory.cpp
